Update funs by requirements (#2)
* Update funs by requirements

* add fields and pagination

* Add admin api/v1/users api
