# docs/swagger.yaml
@@ -302,6 +302,8 @@ definitions:
         type: string
       id:
         type: integer
+      industry:
+        type: string
       logo:
         type: string
       name:
@@ -481,6 +483,19 @@ definitions:
         type: array
       avatar:
         type: string
+      balance:
+        type: integer
+      bilibili:
+        description: |-
+          WechatID     string `bun:"," json:"wechat_id"`
+          GithubID     string `bun:"," json:"github_id"`
+          GitlabID     string `bun:"," json:"gitlab_id"`
+          SessionIP    string `bun:"," json:"session_ip"`
+          Nickname        string `bun:"," json:"nickname"`
+          GitToken        string `bun:"," json:"git_token"`
+          StarhubSynced   bool   `bun:"," json:"starhub_synced"`
+          GitTokenName string `bun:"," json:"git_token_name"`
+        type: string
       bio:
         type: string
       can_change_username:
@@ -532,6 +547,8 @@ definitions:
         type: string
       uuid:
         description: TODO:add unique index after migration
+        type: string
+      weibo:
         type: string
     type: object
   handler.Create.addMemberRequest:
@@ -1078,6 +1095,8 @@ definitions:
       homepage:
         example: https://www.example.com
         type: string
+      industry:
+        type: string
       logo:
         example: https://www.example.com/logo.png
         type: string
@@ -1316,6 +1335,8 @@ definitions:
         type: string
       homepage:
         example: https://www.example.com
+        type: string
+      industry:
         type: string
       logo:
         example: https://www.example.com/logo.png
@@ -1632,7 +1653,11 @@ definitions:
     type: object
   types.Organization:
     properties:
+      description:
+        type: string
       homepage:
+        type: string
+      industry:
         type: string
       logo:
         type: string
@@ -2077,6 +2102,8 @@ definitions:
     properties:
       avatar:
         type: string
+      bilibili:
+        type: string
       bio:
         type: string
       email:
@@ -2103,10 +2130,16 @@ definitions:
         type: array
       uuid:
         type: string
+      weibo:
+        type: string
     type: object
   types.User:
     properties:
       avatar:
+        type: string
+      balance:
+        type: integer
+      bilibili:
         type: string
       bio:
         type: string
@@ -2135,6 +2168,8 @@ definitions:
       username:
         type: string
       uuid:
+        type: string
+      weibo:
         type: string
     type: object
 info:
@@ -7579,6 +7614,27 @@ paths:
       consumes:
       - application/json
       description: get organizations
+      parameters:
+      - description: org type
+        in: query
+        name: org_type
+        type: string
+      - description: industry
+        in: query
+        name: industry
+        type: string
+      - description: search
+        in: query
+        name: search
+        type: string
+      - description: page size
+        in: query
+        name: per
+        type: integer
+      - description: current page number
+        in: query
+        name: page
+        type: integer
       produces:
       - application/json
       responses:
@@ -10207,6 +10263,45 @@ paths:
       summary: '[Deprecated: use DELETE:/token/{app}/{token_name} instead]'
       tags:
       - Access token
+  /users:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: search
+        in: query
+        name: search
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/types.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/types.User'
+                  type: array
+                total:
+                  type: integer
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/types.APIBadRequest'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/types.APIInternalServerError'
+      security:
+      - ApiKey: []
+      summary: Get users info. Only Admin
+      tags:
+      - User
 securityDefinitions:
   ApiKey:
     description: Bearer token
