# user/router/api.go
@@ -90,10 +90,13 @@ func NewRouter(config *config.Config) (*gin.Engine, error) {
 		// userGroup.POST("", userHandler.Create)
 		// user self or admin
 		userGroup.PUT("/:username", mustLogin(), userHandler.Update)
+		userGroup.PUT("/:username/balance", mustLogin(), userHandler.UpdateBalance)
 		//TODO:
 		// userGroup.DELETE("/:username", userMatch, userHandler.Delete)
 		// get user's all tokens
 		userGroup.GET("/:username/tokens", userMatch, acHandler.GetUserTokens)
+		// get user list
+		apiV1Group.GET("/users", mustLogin(), userHandler.Index)
 
 	}
 	// routers for organizations
